Fixed: flex-wrap of internal-fsb-element should be wrap.

--- a/src/public/css/construction/area/area.scss
+++ b/src/public/css/construction/area/area.scss
@@ -268,6 +268,8 @@ body.internal-fsb-mode-coding {
 
 .internal-fsb-inheriting-element,
 .internal-fsb-element {
+  flex-wrap: wrap;
+  
 	> .container,
   > .container-fluid {
   	height: 100%;
