--- a/src/public/css/construction/distribution/embed.scss
+++ b/src/public/css/construction/distribution/embed.scss
@@ -12,6 +12,7 @@ html, body {
 .internal-fsb-inheriting-element,
 .internal-fsb-element {
   padding: 0;
+  flex-wrap: wrap;
   
 	> .container,
   > .container-fluid {
